@@ -1,0 +1,1 @@
+UPDATE `psss_config_help` SET content = '<p><b>Team Defensive Rating</b></p>\r\n\r\n<p>Scoresheet Baseball games are a statistical baseball simulation, but they are not baseball itself.  As such Scoresheet Baseball games generate their own unique statistics.  One of the biggest challenges in real life baseball statistics is generating actionable data from defensive performances.  Thankfully in the Scoresheet Baseball simulation, this is a bit easier because team defence is reduced to numbers.</p>\r\n\r\n<p><b>DRAT</b> is an attempt to generate a team defensive rating based on the defensive data generated by the Scoresheet Baseball simulation.  It combines all the defensive stats into a single number.  The meta objective of <b>DRAT</b> is to achieve a number that accurately reflects the number of defensive runs saved by team defence per nine innings.  This has not been tested, and will likely never be, so what we are left with is an educated guess, and probably a not terribly accurate one.  However the final number generated is useful for comparison purposes.</p>\r\n\r\n<p><b>Formula</b> (all stats in the formula are team total stats)<b>:</b></p>\r\n\r\n<p><code>&nbsp;( ( [Outstanding Plays] - [Fielding Errors] - [Passed Balls] ) / ( [Innings Pitched] - [Strikeouts] * 0.33 ) + [Double Plays Turned] / ( [Hits Allowed] + [Walks Allowed] ) * 0.5 + [Opponent Base Runners Caught Stealing] / ( [Opponent Stolen Bases] + [Opponent Base Runners Caught Stealing] ) * 0.05 ) * 3&nbsp;</code></p>' WHERE id=13;
