@@ -156,7 +156,7 @@ INSERT INTO `psss_config_help` (`id`, `enabled`, `idx`, `title`, `content`, `img
         (10, 1, 100, 'RS', '<p><b>Run Support</b></p>\r\n\r\n<p>This is the total runs scored per 9 innings.</p>\r\n\r\n<p><b>Formula:</b></p>\r\n\r\n<p><code>&nbsp;[Total Runs Scored Scored] / [Innings Pitched] * 9&nbsp;</code></p>\r\n\r\n<p><b>Note:</b> This may not be \"per nine innings\", it may be per game.  If that is the case it might, rarely, result in an error of +/- 0.1.</p>', '', 0),
         (11, 1, 110, 'WHIP', '<p><b>Walks plus Hits per Inning Pitched</b></p>\r\n\r\n<p>This rating is most often applied to pitchers, in these stats it is applied to both individual pitchers and to teams.</p>\r\n\r\n<p><b>Formula:</b></p>\r\n\r\n<p><code>&nbsp;( [Total Walks Allowed] + [Total Hits Allowed] ) / [Total Innings Pitched]&nbsp;</code></p>', '', 0),
         (12, 1, 120, 'OPS', '<p><b>On Base Plus Slugging</b></p>\r\n\r\n<p>Standard baseball statistic that has become the gold standard for measuring a hitter\'s offensive output, On Base Average added to Slugging Average.</p>\r\n\r\n<p>This is the basis for the hitter \"V\" rating on the team rosters pages.</p>', '', 0),
-        (13, 1, 130, 'DRAT', '<p><b>Team Defensive Rating</b></p>\r\n\r\n<p>Scoresheet Baseball games are a statistical baseball simulation, but they are not baseball itself.  As such Scoresheet Baseball games generate their own unique statistics.  One of the biggest challenges in real life baseball statistics is generating actionable data from defensive performances.  Thankfully in the Scoresheet Baseball simulation, this is a bit easier because team defence is reduced to numbers.</p>\r\n\r\n<p><b>DRAT</b> is an attempt to generate a team defensive rating based on the defensive data generated by the Scoresheet Baseball simulation.  It combines all the defensive stats into a single number.  The meta objective of <b>DRAT</b> is to achieve a number that accurately reflects the number of defensive runs saved by team defence per nine innings.  This has not been tested, and will likely never be, so what we are left with is an educated guess, and probably a not terribly accurate one.  However the final number generated is useful for comparison purposes.</p>\r\n\r\n<p><b>Formula</b> (all stats in the formula are team total stats)<b>:</b></p>\r\n\r\n<p><code>&nbsp;( ( [Outstanding Plays] - [Fielding Errors] - [Passed Balls] ) / [Innings Pitched] + [Double Plays Turned] / ( [Hits Allowed] + [Walks Allowed] ) * 0.5 + [Opponent Base Runners Caught Stealing] / ( [Opponent Stolen Bases] + [Opponent Base Runners Caught Stealing] ) * 0.05 ) * 5&nbsp;</code></p>', '', 0),
+        (13, 1, 130, 'DRAT', '<p><b>Team Defensive Rating</b></p>\r\n\r\n<p>Scoresheet Baseball games are a statistical baseball simulation, but they are not baseball itself.  As such Scoresheet Baseball games generate their own unique statistics.  One of the biggest challenges in real life baseball statistics is generating actionable data from defensive performances.  Thankfully in the Scoresheet Baseball simulation, this is a bit easier because team defence is reduced to numbers.</p>\r\n\r\n<p><b>DRAT</b> is an attempt to generate a team defensive rating based on the defensive data generated by the Scoresheet Baseball simulation.  It combines all the defensive stats into a single number.  The meta objective of <b>DRAT</b> is to achieve a number that accurately reflects the number of defensive runs saved by team defence per nine innings.  This has not been tested, and will likely never be, so what we are left with is an educated guess, and probably a not terribly accurate one.  However the final number generated is useful for comparison purposes.</p>\r\n\r\n<p><b>Formula</b> (all stats in the formula are team total stats)<b>:</b></p>\r\n\r\n<p><code>&nbsp;( ( [Outstanding Plays] - [Fielding Errors] - [Passed Balls] ) / ( [Innings Pitched] - [Strikeouts] * 0.33 ) + [Double Plays Turned] / ( [Hits Allowed] + [Walks Allowed] ) * 0.5 + [Opponent Base Runners Caught Stealing] / ( [Opponent Stolen Bases] + [Opponent Base Runners Caught Stealing] ) * 0.05 ) * 3&nbsp;</code></p>', '', 0),
         (14, 1, 140, 'SRAT', '<p><b>Team Speed Rating</b></p>\r\n\r\n<p>Scoresheet Baseball games are a statistical baseball simulation, but they are not baseball itself.  As such Scoresheet Baseball games generate their own unique statistics.  One of the biggest challenges in both real life and Scoresheet baseball statistics is generating actionable data from offensive numbers impacted by team speed.</p>\r\n\r\n<p><b>SRAT</b> is an attempt to generate a team offensive speed rating.  It combines all the offensive stats affected by team speed into a single number.  The meta objective of <b>SRAT</b> is to achieve a number that accurately reflects the number of runs scored impacted by team speed per nine innings.  This has not been tested, and will likely never be, so what we are left with is an educated guess, and probably a not terribly accurate one.  However the final number generated is useful for comparison purposes.</p>\r\n\r\n<p><b>Formula</b> (all stats in the formula are team total stats)<b>:</b></p>\r\n\r\n<p><code>&nbsp;( ( ( [Stolen Bases] - [Caught Stealing] ) * 3 + [Triples] * 6 + [Run Support] - [Grounded into Double Plays] / 1.5 - [Home Runs] * 1.5 ) / ( [Hits] + [Walks] - [Home Runs] ) * 10 + 10 ) * 0.05&nbsp;</code></p>', '', 0),
         (15, 1, 170, 'CG', '<p><b>Complete Games</b></p>\r\n\r\n<p>The number of complete games pitched by a pitcher for individual player stats, or by pitchers on a team for team stats.  In PsychoStats the complete games thrown by Pitcher AAA have been removed from the team stats.</p>', '', 0),
         (16, 1, 160, 'ERA', '<p><b>Earned Run Average</b></p>\r\n\r\n<p>One of the most oldest and well used baseball statistics in the history of the sport.  It represents the number of earned runs scored against a pitcher per 9 innings pitched.  Runs scored as a result of fielding errors and passed balls do not count toward a pitcher\'s ERA, while runs scored as a result of wild pitches do.  If a pitcher leaves a game the runners already on base will count toward the pitcher\'s ERA if they score.</p>\r\n\r\n<p>In Scoresheet <b>ERA</b> is the single most important pitcher statistic.  The Scoresheet game simulation does a very good job of recreating the pitcher\'s real life ERA, modified of course by the total team range rating.</p>', '', 0),
