@@ -141,6 +141,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Division titles and league championships now correctly assigned for current season at season's end.
 * [Fixed] Team name SQL matches are now case sensitive.
 * [Improved] Simplified the SQL to check for weekly results.
+* [Improved] Outs due to strikeouts no longer factor into DRAT.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
